# mfu-health-agent

./: FIX_REQUEST.md  TEST_REPORT.md  test_field_mapper_qa.py  test_normalizer_tc.py
mfu_agent/: .env.example  .gitignore  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  test_factor_store_qa.py
mfu_agent/agent/: core.py  memory.py
mfu_agent/config/: loader.py  weights_manager.py
mfu_agent/configs/: agent_config.yaml  component_vocabulary.yaml  error_code_patterns.yaml  field_synonyms.yaml  llm_endpoints.yaml  model_aliases.yaml  rag_config.yaml  report_config.yaml
mfu_agent/data_io/: factor_store.py  field_mapper.py  models.py  normalizer.py  parsers.py  preamble.py  zabbix_transform.py
mfu_agent/docs/: ARCHITECTURE.md  ARCHITECTURE_FULL.md
mfu_agent/error_codes/: __init__.py  aliases.py  consistency.py  loader.py  parsers.py  schema.py  writer.py
mfu_agent/llm/: auth.py  client.py  http.py
mfu_agent/pages/: 1_Загрузка_данных.py  2_Dashboard.py  3_Weights.py  4_LLM_Chat.py  5_Error_Codes.py  5_RAG_Admin.py
mfu_agent/rag/: _indexing_worker.py  embeddings.py  evaluation.py  ingestion.py  qdrant_client.py  reindex_error_codes.py  reranker.py  search.py
mfu_agent/reporting/: pdf_generator.py  report_builder.py
mfu_agent/scripts/: start_llama.sh
mfu_agent/state/: _analysis_bg.py  _deep_bg.py  _rag_bg.py  session.py  singletons.py
mfu_agent/tests/: test_agent_core.py  test_agent_p0.py  test_agent_tools.py  test_bug_hunt.py  test_calculator.py  test_calculator_bounds_contrib.py  test_calculator_determinism.py  test_calculator_factors.py  test_calculator_p0.py  test_calculator_weights_perf.py  test_calculator_zones_confidence.py  test_contracts_p0.py  test_csv_preamble_consistency.py  test_deep_analysis.py  test_derived_state_reset.py  test_error_codes.py  test_factor_store.py  test_field_mapper.py  test_gigachat_token_provider.py  test_llm_endpoint_config.py  test_local_model_manager.py  test_nf_p0.py  test_normalizer.py  test_p0_ingestion.py  test_parsers.py  test_parsers_tc.py  test_rag_p0.py  test_react_parser.py  test_report_builder.py  test_reporting_p0.py  test_strip_artifacts.py  test_weights_recalc_e2e.py  test_xerox_codes.py
mfu_agent/tools/: calculator.py
mfu_agent/ui/: __init__.py  endpoint_selector.py  (+1 more)
(+89 files in other folders)
